@@ -20,7 +20,7 @@ var M = M || {};
 /**
  * The version of The-M-Project
  */
-M.Version = '0.7pre';
+M.Version = '0.8pre';
 
 /**
  * These command is used by the build tool to control the load order.
